--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -33,3 +33,16 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+.button {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 10px 0;
+
+}
