--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-image: url('../img/2025PlazaMayorCopia2.png');
+    background-size: cover;
+    background-position: center;
 }
 
 .card-switch {
@@ -28,7 +30,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #f7f7f7;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.6s;
@@ -70,11 +72,11 @@
 }
 
 .flip-card__front {
-    background-color: #fff;
+    background-color: #f7f7f7;
 }
 
 .flip-card__back {
-    background-color: #f8f9fa;
+    background-color: #f7f7f7;
     transform: rotateY(180deg);
 }
 
@@ -107,4 +109,10 @@
 
 .flip-card__btn:hover {
     background-color: #0056b3;
+}
+
+.logo {
+    max-width: 100%;
+    max-height: 100px; /* Ajusta la altura máxima de la imagen */
+    margin-bottom: 20px;
 }
